<resources>
    <string name="app_name">Olx Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Olx">OLX</string>
    <string name="india">India</string>
    <string name="leading_market">India\'s leading\nmarketplace</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="terms">If you are accepting\n OLX  Terms and Conditions and Privacy Policy</string>
<!--    <string name="default_web_client_id">804919450220-44bepm0n15e0hlvfniu2lves5ha2c3qs.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">580161069574004</string>
    <string name="fb_login_protocol_scheme">fb580161069574004</string>
    <string name="find_cars">Find Cars,Mobile Phones and More....</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="title_sell">Sell</string>
    <string name="offering">What are you offering?</string>
    <string name="brand">Brand *</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="year">Year *</string>
    <string name="km_driven">KM_driven</string>
    <string name="km_drivens">KM driven</string>
    <string name="ad_title">Ad Title *</string>
    <string name="mention">Mention the key features of your item(e.g brand, model, age, type)</string>
    <string name="describe">Describe What are you selling*</string>
    <string name="include_features">Include condition, features and reason for selling</string>
    <string name="price">Price *</string>
    <string name="address">Address *</string>
    <string name="address_simple">Address</string>
    <string name="phone">Phone Number *</string>
    <string name="required_fields">* Required Fields</string>
    <string name="next">Next</string>
    <string name="title_include_details">Include  Details</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_five">Upload up to 5 Photos</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_source">Select Source</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="title_my_Ads">My Ads</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="Phone_simple">Phone</string>
    <string name="year_simple">Year</string>
    <string name="call">Call</string>
    <string name="title_details">Details</string>
    <string name="title_browse">Browse Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="Phone_number_simple">Phone Number</string>
    <string name="postal_adddress">Postal Address</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="saved_success">Saved Successfully</string>
    <string name="title_settings">Settings</string>
</resources>