<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?actionBarSize">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_240"
                android:id="@+id/viewPager"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:layout_gravity="center"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_8">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:text="$100.00"
                android:id="@+id/tvPrice"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:text=""
                android:id="@+id/tvTitle"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:text=""
                android:layout_gravity="end"
                android:id="@+id/tvDate"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:text=""
                android:id="@+id/tvBrand"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />





        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@android:color/darker_gray"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                android:text="@string/details"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>



                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/llkmDriven"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/dp_8">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:text="@string/km_drivens"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:text="@string/details"
                        android:id="@+id/tvKmDriven"
                        android:gravity="end|center"
                        android:layout_gravity="end|center"
                        android:textColor="@android:color/black"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>




                </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/year_simple"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/details"
                    android:id="@+id/tvYear"
                    android:gravity="end|center"
                    android:layout_gravity="end|center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/address_simple"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/details"
                    android:id="@+id/tvAddress"
                    android:gravity="end|center"
                    android:layout_gravity="end|center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>




            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/details"
                    android:id="@+id/tvDescription"
                    android:gravity="end|center"
                    android:layout_gravity="end|center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>




            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/Phone_simple"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_8"
                    android:text="@string/details"
                    android:id="@+id/tvPhone"
                    android:gravity="end|center"
                    android:layout_gravity="end|center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>




            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>


    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/call"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:id="@+id/tvCall"
        android:padding="@dimen/dp_12"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>